--- a/CattleManager/WebContent/WEB-INF/web.xml
+++ b/CattleManager/WebContent/WEB-INF/web.xml
@@ -50,11 +50,11 @@
 	  
 	<!-- CrossDomain Filter  -->
 	<filter>
-	  <filter-name>appFilter</filter-name>
-	  <filter-class>com.cattle.filter.CattleFilter</filter-class>
+	  <filter-name>cattleManagerFilter</filter-name>
+	  <filter-class>com.cattle.framework.filter.CattleManagerFilter</filter-class>
 	</filter>
 	<filter-mapping>
-	  <filter-name>appFilter</filter-name>
+	  <filter-name>cattleManagerFilter</filter-name>
 	  <url-pattern>/*</url-pattern>
 	</filter-mapping>
  
